--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -22,7 +22,7 @@
             </Grid.ColumnDefinitions>
             <Image Grid.Column="0" Source="\Resources\logo.png" Width="80" Height="80"/>
             <TextBlock Grid.Column="1" Text="Авторизация" Style="{StaticResource Title}"/>
-            <Button Grid.Column="2" x:Name="Exit" Content="Выход"  Click="Exit_Click" Margin="20,0,0,0" Background="#A2D729" Style="{StaticResource Title}" Width="200" Height="50" HorizontalAlignment="Left"/>
+            <Button Grid.Column="2" x:Name="Exit" Content="Выход"  Click="Exit_Click" Margin="20,0,0,0" Background="#A2D729" Width="150" Height="50" HorizontalAlignment="Left"/>
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -45,8 +45,8 @@
             <CheckBox x:Name="isVisiblePassword" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="30, 10" Checked="isVisiblePassword_Checked" Unchecked="isVisiblePassword_Unchecked" />
             <cap:Captcha Name="captcha" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Right" Margin="0, 0, 15, 0" BorderBrush="Black" BorderThickness="1" Visibility="Hidden"/>
             <TextBox x:Name="tbCaptcha" Grid.Row="3" Grid.Column="1" Margin="20,11,70,17" FontSize="24" Visibility="Hidden"/>
-            <Button Grid.Row="4" Grid.Column="0" Content="Войти как гость"  Background="#A2D729" x:Name="Gost" Style="{StaticResource Title}" Width="300" Height="50" Click="Gost_Click"/>
-            <Button Grid.Row="4" Grid.Column="1" Content="Авторизация" Background="#A2D729" x:Name="Start" Click="Start_Click" Style="{StaticResource Title}" Width="300" Height="50"/>
+            <Button Grid.Row="4" Grid.Column="0" Content="Войти как гость"  x:Name="Gost" Width="300" Height="50" Click="Gost_Click"/>
+            <Button Grid.Row="4" Grid.Column="1" Content="Авторизация"  x:Name="Start" Click="Start_Click" Width="300" Height="50"/>
 
         </Grid>
         <Grid Grid.Row="2" Background="#3C91E6">
